# rag-llm-infra

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  conftest.py  evidence_index.py  example.py  llm_protocol.py  log_config.py  pyproject.toml  requirements-dev.txt  requirements.txt  vector_store.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/decisions/: 006-llm-protocol-abstraction.md  README.md
eval/: generation_eval.py  retrieval_eval.py
src/rag_llm_infra/: __init__.py  _demo.py  evidence_index.py  faithfulness.py  fallback.py  llm_protocol.py  log_config.py  serve.py  tracing.py  vector_store.py
tests/: test_evidence_index.py  test_example.py  test_faithfulness.py  test_fallback.py  test_generation_eval.py  test_llm_protocol.py  test_log_config.py  test_retrieval_eval.py  test_serve.py  test_tracing.py  test_vector_store.py
