[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-llm-infra"
version = "0.1.2"
description = "Vendor-neutral RAG + LLM serving infrastructure: swappable LLM protocol and vector store (FAISS/NumPy/Qdrant), cached embedding index, and observability."
readme = "README.md"
# 3.12 to match the single tested/configured version (CI matrix, ruff
# target-version, mypy python_version, and the 3.12 classifier). The project was
# not tested on 3.10/3.11, so it does not claim them.
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Marwa Ben Salem" }]
keywords = ["rag", "llm", "vector-store", "faiss", "qdrant", "openai", "embeddings", "retrieval"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
faiss = ["faiss-cpu>=1.9"]
qdrant = ["qdrant-client>=1.12"]
embeddings = ["sentence-transformers>=3.0"]
otel = ["opentelemetry-api>=1.29", "opentelemetry-sdk>=1.29", "opentelemetry-exporter-otlp-proto-grpc>=1.29"]
serve = ["fastapi>=0.115", "uvicorn>=0.30"]
# Enables EmbeddingEngine's memory-pressure cache trimming (a no-op without it).
psutil = ["psutil>=5.9"]
dev = [
  "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "httpx>=0.27",
  "ruff>=0.6", "mypy>=1.11", "build>=1.0",
  "faiss-cpu>=1.9", "qdrant-client>=1.12", "fastapi>=0.115",
  # psutil + the OTel SDK so CI exercises the real memory-pressure-trim and
  # tracing-configuration branches instead of their import-guarded fallbacks.
  "psutil>=5.9", "opentelemetry-api>=1.29", "opentelemetry-sdk>=1.29",
]

[project.urls]
Homepage = "https://github.com/MarwaBS/rag-llm-infra"
Repository = "https://github.com/MarwaBS/rag-llm-infra"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_llm_infra"]

[tool.ruff]
target-version = "py312"
src = ["src"]
exclude = [".git", ".venv", "__pycache__"]

[tool.ruff.lint]
# F/E (pyflakes/pycodestyle) + I (import sort), B (bugbear: real-bug lints),
# UP (pyupgrade: keep syntax current to the py312 floor).
select = ["F", "E", "I", "B", "UP"]
ignore = ["E402", "E501", "E701", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"src/rag_llm_infra/evidence_index.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib"
asyncio_mode = "auto"
pythonpath = ["src", "."]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]
filterwarnings = [
  "ignore:.*SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:.*SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:.*swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["rag_llm_infra.*"]
disallow_untyped_defs = true
warn_return_any = false

[tool.coverage.run]
source = ["src/rag_llm_infra"]
omit = ["tests/*", "*/__init__.py"]
